crates/batchalign/tests/snapshots/json_compat__health_response.snap
---
source: crates/batchalign-app/tests/json_compat.rs
expression: health
---
{
  "status": "ok",
  "version": "0.10.0",
  "node_id": "",
  "free_threaded": true,
  "capabilities": [
    "align",
    "morphotag",
    "transcribe"
  ],
  "loaded_pipelines": [
    "morphotag:eng:1"
  ],
  "media_roots": [
    "/data/media"
  ],
  "media_mapping_keys": [
    "childes-data"
  ],
  "workers_available": 3,
  "job_slots_available": 3,
  "live_workers": 1,
  "live_worker_keys": [
    "morphotag:eng"
  ],
  "active_jobs": 1,
  "cache_backend": "sqlite",
  "worker_crashes": 0,
  "attempts_started": 0,
  "attempts_retried": 0,
  "deferred_work_units": 0,
  "forced_terminal_errors": 0,
  "memory_gate_aborts": 0,
  "build_hash": "0.10.0-abc1234-1700000000",
  "system_memory_total_mb": 65536,
  "system_memory_available_mb": 32768,
  "system_memory_used_mb": 32768,
  "memory_gate_threshold_mb": 8192,
  "host_memory_pressure": "guarded",
  "host_memory_reserved_mb": 12000,
  "host_memory_startup_leases": 1,
  "host_memory_job_leases": 1,
  "host_memory_ml_test_locks": 0,
  "host_memory_active_leases": [
    "WorkerStartup:worker-startup:profile:gpu:eng:{}:16000MB",
    "JobExecution:job-execution:job-1:align:eng:12000MB"
  ]
}
