crates/batchalign/tests/snapshots/json_compat__job_submission_paths_mode.snap
---
source: crates/batchalign/tests/json_compat.rs
expression: sub
---
{
  "command": "morphotag",
  "lang": "eng",
  "num_speakers": 1,
  "files": [],
  "media_files": [],
  "media_mapping": "",
  "media_subdir": "",
  "source_dir": "/input",
  "options": {
    "command": "morphotag",
    "override_media_cache": false,
    "retokenize": false,
    "skipmultilang": false,
    "merge_abbrev": false,
    "no_l2_morphotag": false,
    "no_pos_hints": false,
    "review_level": "none"
  },
  "paths_mode": true,
  "source_paths": [
    "/input/a.cha",
    "/input/b.cha"
  ],
  "output_paths": [
    "/output/a.cha",
    "/output/b.cha"
  ],
  "display_names": [
    "a.cha",
    "b.cha"
  ],
  "debug_traces": false,
  "before_paths": []
}
