crates/batchalign/tests/snapshots/json_compat__server_config_default.snap
---
source: crates/batchalign/tests/json_compat.rs
expression: cfg
---
{
  "media_roots": [],
  "media_mappings": {},
  "verbose": 0,
  "default_lang": "eng",
  "port": 8000,
  "host": "0.0.0.0",
  "allow_mps": null,
  "job_ttl_days": 7,
  "warmup_commands": [
    "morphotag",
    "align",
    "transcribe"
  ],
  "auto_daemon": true,
  "worker_health_interval_s": 30,
  "max_concurrent_worker_startups": 1,
  "worker_ready_timeout_s": 300,
  "max_body_bytes_mb": 512,
  "memory_gate_timeout_s": 120,
  "memory_gate_poll_s": 5,
  "memory_warning_mb": 4096,
  "local_lease_ttl_s": 300,
  "audio_task_timeout_s": 0,
  "analysis_task_timeout_s": 0,
  "ensure_task_timeout_s": 0,
  "worker_registry_path": "",
  "memory_tier": null,
  "gpu_startup_mb": null,
  "stanza_startup_mb": null,
  "io_startup_mb": null,
  "fleet_target": null
}
